# hitavada-crossword-downloader

./: .gitignore  Cargo.toml  README.md  config.toml  deploy.sh  samconfig.toml  template.yaml
events/: event.json
src/: main.rs
src/crossword/: mod.rs
src/drive/: mod.rs
src/http/: mod.rs
src/parser/: mod.rs
src/types/: mod.rs
