[package]
name = "hitavada-crossword-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "cookies"] }
tokio = { version = "1.36", features = ["full"] }
scraper = "0.18"
chrono = "0.4"
anyhow = "1.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
