[package]
name = "hitavada-crossword-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["cookies"] }
tokio = { version = "1.36", features = ["full"] }
scraper = "0.18"
chrono = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
lambda_runtime = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
aws-config = "1.1"
aws-sdk-ssm = "1.1"
google-drive3 = "5.0"
yup-oauth2 = "9.0"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.24"

[dev-dependencies]
tempfile = "3.10"
